    + [NT] New files.  Thanks to Kees Cook for the patch.
  * collection/index{,.desc}:
    + [NT] Compress index output and bump version of index.
  * collection/objdump-info:
    + [NT] Use "fail" from Lintian::Util.pm rather than embedding a
      copy of it.
    + [NT] Use Lintian::Collect to find ELF files.
    + [NT] Replace all usage of objdump with readelf.
      (Closes: #614034)

  * data:
    + [NT] Move to vendors/debian/ftp-master-auto-reject and replace
      it with a symlink.
  * data/binaries/embedded-libs:
    + [NT] New file.
    + [NT] Add libav libraries.  Thanks to Andres Mejia for the
      suggestion and the suggested patch.  (Closes: #666765)
  * data/binaries/hardening-tags:
    + [NT] New file.
  * data/changes-file/{debian-dists -> known-dists}:
    + [NT] Renamed file.
  * data/menu-format/menu-sections:
    + [NT] New file.

  * frontend/lintian:
    + [JW] Fix typo in error message.
    + [JW,NT] Fix handling of "override" option in the lintianrc file.
      (Closes: #666207)

  * lib/Lintian/Architecture.pm:
    + [NT] Lazily evaluate the data file.
  * lib/Lintian/Collect/Package.pm:
    + [NT] Remove an extra level of quoting in index.
    + [NT] Remove root dir from sorted_index.
    + [NT] Keep trailing slash in dir names for file_info.
  * lib/Lintian/Collect/Binary.pm:
    + [NT] Remove sorted_file_info as sorted_index now produces
      an identical list.
  * lib/Lintian/Data.pm:
    + [NT] Lazily load data files.
    + [NT] Allow pre-process sub to alter existing value for a key
      by passing the previous value as third argument.
    + [NT] Allow vendor specific data files.  They will be loaded
      from LINTIAN_ROOT/vendors/$profile/data.
  * lib/Lintian/Output{,/*}.pm:
    + [NT] Replace non-printables with "?" in output.
  * lib/Lintian/Profile.pm:
    + [NT] Normalize profile name and replace "parents" with
      "profile_list".  The latter also includes the current profile
      name.
  * lib/Lintian/Tag/Info.pm: