@@ -3,5 +3,5 @@ Author: Raphael Geissert <atomo64@gmail.com>
 Info: This script runs the strings(1) command over all files of a binary
  package.
 Type: binary, udeb
-Version: 1
+Version: 2
 Needs-Info: unpacked, file-info
