@@ -111,6 +111,8 @@ lintian (2.5.7) UNRELEASED; urgency=low
     + [NT] Use Lintian::Collect to find ELF files.
     + [NT] Replace all usage of objdump with readelf.
       (Closes: #614034)
+  * collection/strings{,.desc}:
+    + [NT] Compress strings output and bump version of strings.
 
   * data:
     + [NT] Move to vendors/debian/ftp-master-auto-reject and replace
